# Agente-Vaapty

./: .env.example  .gitignore  README.md  pyproject.toml
plan/: ESPECIFICACAO_MVP.md  FAQ_CATEGORIAS.md  RELATORIO_AGENTE_VAAPTY.md  questions.md
scripts/: provision_ghl.py  smoke_ghl.py
src/vaapty_agent/: __init__.py  business_hours.py  config.py  db.py  llm.py  logging.py  main.py  metrics.py  orchestrator.py  security.py
src/vaapty_agent/agent/: responder.py  schemas.py  updater.py
src/vaapty_agent/endpoints/: inbound.py
src/vaapty_agent/ghl/: __init__.py  client.py  contacts.py  conversations.py  custom_values.py  workflows.py
src/vaapty_agent/prompts/: responder_persona.py  updater_system.py
src/vaapty_agent/tools/: calendar.py  faq.py  handoff.py  price_guard.py  terminal.py
tests/: test_price_guard.py  test_schemas.py
