[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaapty-agent"
version = "0.1.0"
description = "Agente de pré-atendimento Vaapty (qualificação receptiva, Agno + GoHighLevel)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.54",
    "agno>=1.0",
    "pyyaml>=6.0",
    "tenacity>=9.0",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "python-dateutil>=2.9",
    "unidecode>=1.3",
    "python-multipart>=0.0.12",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.scripts]
vaapty-agent = "vaapty_agent.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
